--- a/2024/02-biocoll/references.bib
+++ b/2024/02-biocoll/references.bib
@@ -1,3 +1,17 @@
+@article{akritas1994nearestneighbor,
+  title = {Nearest {{Neighbor Estimation}} of a {{Bivariate Distribution Under Random Censoring}}},
+  author = {Akritas, Michael G.},
+  date = {1994-09},
+  journaltitle = {The Annals of Statistics},
+  volume = {22},
+  number = {3},
+  pages = {1299--1327},
+  publisher = {{Institute of Mathematical Statistics}},
+  issn = {0090-5364, 2168-8966},
+  doi = {10.1214/aos/1176325630},
+  keywords = {62G05,62G30,62H12,62J05,Beran optimality,Conditional empirical processes,conditional Kaplan-Meier estimator,polynomial regression,weak convergence}
+}
+
 @incollection{andersen1993introduction,
   title = {Introduction},
   booktitle = {Statistical {{Models Based}} on {{Counting Processes}}},
@@ -57,6 +71,21 @@
   isbn = {978-0-387-72834-6},
   langid = {english},
   keywords = {archived}
+}
+
+@article{graf1995investigationmeasures,
+  title = {An {{Investigation}} on {{Measures}} of {{Explained Variation}} in {{Survival Analysis}}},
+  author = {Graf, Erika and Schumacher, Martin},
+  date = {1995},
+  journaltitle = {Journal of the Royal Statistical Society. Series D (The Statistician)},
+  volume = {44},
+  number = {4},
+  eprint = {2348898},
+  eprinttype = {jstor},
+  pages = {497--507},
+  publisher = {{[Royal Statistical Society, Wiley]}},
+  issn = {0039-0526},
+  doi = {10.2307/2348898}
 }
 
 @article{pohar2006relativesurvival,
