--- a/2024/02-biocoll/library.bib
+++ b/2024/02-biocoll/library.bib
@@ -1605,7 +1605,7 @@ year = {2020}
   year      = {2019}
 }
 @misc{pkgcoxboost,
-  author    = {Binder, Harold},
+  author    = {Binder, Harald},
   publisher = {CRAN},
   title     = {{CoxBoost: Cox models by likelihood based boosting for a single survival endpoint or competing risks}},
   year      = {2013}
