--- a/2024/02-biocoll/references.bib
+++ b/2024/02-biocoll/references.bib
@@ -88,6 +88,21 @@
   doi = {10.2307/2348898}
 }
 
+@article{graf1995investigationmeasuresa,
+  title = {An {{Investigation}} on {{Measures}} of {{Explained Variation}} in {{Survival Analysis}}},
+  author = {Graf, Erika and Schumacher, Martin},
+  date = {1995},
+  journaltitle = {Journal of the Royal Statistical Society. Series D (The Statistician)},
+  volume = {44},
+  number = {4},
+  eprint = {2348898},
+  eprinttype = {jstor},
+  pages = {497--507},
+  publisher = {{[Royal Statistical Society, Wiley]}},
+  issn = {0039-0526},
+  doi = {10.2307/2348898}
+}
+
 @article{pohar2006relativesurvival,
   title = {Relative Survival Analysis in {{R}}},
   author = {Pohar, Maja and Stare, Janez},
